k8s_yamls/alpaca-web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpaca-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      ver: "1"
      app: "alpaca"
  template:
    metadata:
      labels:
        ver: "1"
        app: "alpaca"
    spec:
      containers:
        - image: gcr.io/kuar-demo/kuard-amd64:blue
          name: alpaca-prod
          ports:
            - containerPort: 8080
