k8s_yamls/alpaca-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alpaca-service
spec:
  type: ClusterIP
  selector:
    ver: "1"
    app: "alpaca"
  ports:
    - port: 8080
      targetPort: 8080
