k8s_yamls/alpaca-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alpaca-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: alpaca.vamehouse
      http:
          paths:
            - path: /test
              pathType: Prefix
              backend:
                service: 
                  name: alpaca-service
                  port:
                    number: 8080
